# seo-crawler

./: .env.example  .gitignore  README.md  docker-compose-local.yml  docker-compose-prod.yml  docker-compose-staging.yml  pyproject.toml
database/: alembic.ini
database/alembic/: env.py  script.py.mako
database/alembic/versions/: 001_initial_config_tables.py
docker/: api.Dockerfile  crawler.Dockerfile  pgadmin-servers.json
documentation/changelog/: changelog-mcp-config.json  changelog.md
documentation/project/: projekt.md
src/backend/: __init__.py
src/backend/analysis/: __init__.py
src/backend/analysis/issues/: __init__.py
src/backend/api/: __init__.py  app.py
src/backend/api/middleware/: __init__.py
src/backend/api/routes/: __init__.py
src/backend/api/schemas/: __init__.py
src/backend/config/: __init__.py  settings.py
src/backend/core/: __init__.py  database.py
src/backend/core/models/: __init__.py  base.py  config_db.py  project_db.py
src/backend/core/services/: __init__.py  database_service.py
src/backend/core/utils/: __init__.py
src/backend/crawler/: __init__.py  items.py  settings.py
src/backend/crawler/middlewares/: __init__.py
src/backend/crawler/pipelines/: __init__.py
src/backend/crawler/spiders/: __init__.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/fixtures/: __init__.py
src/backend/tests/integration/: __init__.py
src/backend/tests/unit/: __init__.py  test_config.py  test_database.py  test_models.py
