[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-crawler"
version = "1.0.0"
description = "Hochperformanter, modularer Web-Crawler fuer technische SEO-Audits"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "scrapy>=2.11,<3.0",
    "scrapy-playwright>=0.0.40",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "redis>=5.2,<6.0",
    "asyncpg>=0.30,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "jinja2>=3.1,<4.0",
    "httpx>=0.28,<1.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<7.0",
    "mypy>=1.13,<2.0",
    "black>=24.10,<25.0",
    "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["src/backend/tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["backend"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
target-version = ["py311"]
line-length = 120
